--- a/Bootstrap/Craftivo/index.html
+++ b/Bootstrap/Craftivo/index.html
@@ -124,18 +124,11 @@
                 <span class="role">Web Developer</span>
               </div>
 
-
               <div class="profile-actions">
                 <a href="#" class="btn-primary"><i class="bi bi-download"></i> Download CV</a>
                 <a href="#" class="btn-secondary"><i class="bi bi-envelope"></i> Contact</a>
               </div>
 
-              <div class="social-connect">
-                <a href="#"><i class="bi bi-linkedin"></i></a>
-                <a href="#"><i class="bi bi-github"></i></a>
-                <a href="#"><i class="bi bi-twitter"></i></a>
-                <a href="#"><i class="bi bi-instagram"></i></a>
-              </div>
             </div>
           </div>
 
@@ -200,17 +193,11 @@
 
       <!-- Academic Background -->
       <div class="container" data-aos="fade-up" data-aos-delay="100">
-          <div class="row text-center">
             <div class="education-section">
-              <div class="section-header" data-aos="fade-left" data-aos-delay="200">
-                <div class="header-content">
-                  <span class="section-badge">Education</span>
-                  <h2>Academic Background</h2>
-                  <p>Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur vel illum.</p>
-                </div>
-              </div>
 
-              <div class="row" style="width: 50%; justify-items: center;">
+
+              <!-- Educational Background 1 -->
+              <div class="row-lg-6" style="justify-items: center;">
               <div class="education-timeline" data-aos="fade-left" data-aos-delay="300">
                 <div class="timeline-track">
                   <div class="timeline-item">
@@ -219,16 +206,23 @@
                     </div>
                     <div class="timeline-content">
                       <div class="education-meta">
-                        <span class="year-range">2015 - 2017</span>
-                        <span class="degree-level">Masters</span>
+                        <span class="year-range">2021 - Present</span>
+                        <span class="degree-level">College</span>
                       </div>
-                      <h4>Master of Design Innovation</h4>
-                      <p class="institution">Institute of Creative Arts</p>
-                      <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit sed do eiusmod tempor incididunt ut labore.</p>
+                      <h4>Bachelor of Science in Information Technology</h4>
+                      <p class="institution">Mapua Malayan Colleges Laguna</p>
+                      <p class="description">Relevant courses: Web Development, Software Engineering, Software Design, Networking, IoT</p>
                       <div class="achievement">
                         <i class="bi bi-award"></i>
-                        <span>Summa Cum Laude</span>
+                        <span>Dean's Lister - 1st Year, 2nd Term</span><br>
                       </div>
+                      <div class="achievement">
+                        <i class="bi bi-award"></i>
+                        <span>Dean's Lister - 1st Year, 3rd Term</span><br>
+                      </div>
+
+
+                      <!-- Educational Background 2 -->
                     </div>
                   </div>
 
@@ -238,37 +232,17 @@
                     </div>
                     <div class="timeline-content">
                       <div class="education-meta">
-                        <span class="year-range">2011 - 2015</span>
-                        <span class="degree-level">Bachelor</span>
+                        <span class="year-range">2019 - 2021</span>
+                        <span class="degree-level">Senior High School</span>
                       </div>
-                      <h4>Bachelor of Fine Arts</h4>
-                      <p class="institution">Creative Arts University</p>
-                      <p class="description">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                      <h4>Science, Technology, Engineering, and Mathematics</h4>
+                      <p class="institution">Far Eastern University, Alabang</p>
+                      <div class="achievement">
+                        <i class="bi bi-award"></i>
+                        <span>Graduated with Honors (2021)</span>
                     </div>
                   </div>
 
-                  <div class="timeline-item">
-                    <div class="timeline-marker">
-                      <i class="bi bi-patch-check-fill"></i>
-                    </div>
-                    <div class="timeline-content">
-                      <div class="education-meta">
-                        <span class="year-range">2016 - 2023</span>
-                        <span class="degree-level">Certificates</span>
-                      </div>
-                      <h4>Professional Certifications</h4>
-                      <div class="certifications-list">
-                        <div class="cert-item">
-                          <span class="cert-name">Advanced UX Research</span>
-                          <span class="cert-year">2023</span>
-                        </div>
-                        <div class="cert-item">
-                          <span class="cert-name">Design Leadership</span>
-                          <span class="cert-year">2022</span>
-                        </div>
-                        <div class="cert-item">
-                          <span class="cert-name">Digital Strategy</span>
-                          <span class="cert-year">2021</span>
                         </div>
                       </div>
                     </div>
@@ -288,8 +262,8 @@
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <span class="subtitle">Services</span>
-        <h2>Services</h2>
+        <span class="subtitle">Certifications</span>
+        <h2>Certifications</h2>
         <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium totam rem aperiam</p>
       </div><!-- End Section Title -->
 
