--- a/Bootstrap/Craftivo/index.html
+++ b/Bootstrap/Craftivo/index.html
@@ -186,8 +186,7 @@
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <span class="subtitle">Education</span>
-        <h2>Educational Background</h2>
+        <span class="subtitle" style="font-size: 30px;">Educational Background</span>
       </div>
       <!-- End Section Title -->
 
@@ -262,9 +261,7 @@
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <span class="subtitle">Certifications</span>
-        <h2>Certifications</h2>
-        <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium totam rem aperiam</p>
+        <span class="subtitle" style="font-size: 30px" ;">Certifications</span>
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
