--- a/Craftivo/index.html
+++ b/Craftivo/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="keywords" content="">
 
-<include
+<include>
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
@@ -93,6 +93,7 @@
               <li><a href="#ojt-output">OJT Final Output</a></li>
             </ul>
           </li>
+          <li><a href="#appendices">Appendices</a></li>
           <li><a href="#contact">Contact</a></li>
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
@@ -930,6 +931,25 @@
 
     </section><!-- /OJT Final Output Section -->
 
+    <!-- Contact Section -->
+    <section id="appendices" class="appendices section">
+
+      <!-- Section Title -->
+      <div class="container section-title" data-aos="fade-up">
+        <span class="subtitle">Appendices</span>
+       </div><!-- End Section Title -->
+       <div class="content-wrapper">
+       <div class="bio-section">
+        <div class="details-grid">
+                <div class="detail-item" data-aos="fade-up" data-aos-delay="250">
+                  <i class="bi bi-mortarboard"></i>
+                  <div class="detail-content">
+                    <span>Degree</span>
+                    <strong>Bachelor of Science in Information Technology</strong>
+                  </div>
+                </div>
+              </div>
+            </div>
     <!-- Contact Section -->
     <section id="contact" class="contact section">
 
