--- a/Craftivo/index.html
+++ b/Craftivo/index.html
@@ -935,10 +935,10 @@
     <section id="appendices" class="appendices section">
 
       <!-- Section Title -->
-      <div class="container section-title" data-aos="fade-up">
+      <!-- <div class="container section-title" data-aos="fade-up">
         <span class="subtitle">Appendices</span>
        </div><!-- End Section Title -->
-       <div class="content-wrapper">
+       <!-- <div class="content-wrapper">
        <div class="bio-section">
         <div class="details-grid">
                 <div class="detail-item" data-aos="fade-up" data-aos-delay="250">
@@ -950,17 +950,17 @@
                 </div>
               </div>
             </div>
-    <!-- Contact Section -->
-    <section id="contact" class="contact section">
+    Contact Section -->
+    <!-- <section id="contact" class="contact section"> -->
 
       <!-- Section Title -->
-      <div class="container section-title" data-aos="fade-up">
+      <!-- <div class="container section-title" data-aos="fade-up">
         <span class="subtitle">Contact</span>
         <h2>Contact</h2>
         <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium totam rem aperiam</p>
-      </div><!-- End Section Title -->
+      </div>End Section Title -->
 
-      <div class="container">
+      <!-- <div class="container">
 
         <div class="row gy-4">
 
@@ -995,9 +995,9 @@
               </div>
             </div>
 
-          </div>
+          </div> -->
 
-          <div class="col-lg-8">
+          <!-- <div class="col-lg-8">
             <form action="forms/contact.php" method="post" class="php-email-form">
               <div class="row gy-4">
 
@@ -1031,12 +1031,12 @@
 
         </div>
 
-      </div>
+      </div> -->
 
     </section><!-- /Contact Section -->
 
   </main>
-
+<!-- 
   <footer id="footer" class="footer">
 
     <div class="container footer-top">
@@ -1097,7 +1097,7 @@
         <!-- Purchase the pro version with working PHP/AJAX contact form: [buy-url] -->
         Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
       </div>
-    </div>
+    </div> -->
 
   </footer>
 
