--- a/Craftivo/index.html
+++ b/Craftivo/index.html
@@ -931,26 +931,120 @@
 
     </section><!-- /OJT Final Output Section -->
 
-    <!-- Contact Section -->
+    <!-- Appendices Section -->
     <section id="appendices" class="appendices section">
 
       <!-- Section Title -->
-      <!-- <div class="container section-title" data-aos="fade-up">
-        <span class="subtitle">Appendices</span>
-       </div><!-- End Section Title -->
-       <!-- <div class="content-wrapper">
-       <div class="bio-section">
-        <div class="details-grid">
-                <div class="detail-item" data-aos="fade-up" data-aos-delay="250">
-                  <i class="bi bi-mortarboard"></i>
-                  <div class="detail-content">
-                    <span>Degree</span>
-                    <strong>Bachelor of Science in Information Technology</strong>
-                  </div>
+      <div class="container section-title" data-aos="fade-up">
+        <span class="subtitle" style="font-size: 30px;">Appendices</span>
+      </div>
+      <!-- End Section Title -->
+
+      <div class="container">
+        <div class="row gy-3 justify-content-center">
+          
+          <!-- Appendix Card 1 -->
+          <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
+            <div class="p-card-appen">
+              <div class="p-card-body">
+                <div class="appendices-action">
+                  <a href="" target="_blank">
+                    <i class="bi bi-download"></i>
+                  </a>
                 </div>
+                <strong>Competency-Based CV</strong>
               </div>
             </div>
-    Contact Section -->
+          </div>
+
+          <!-- Appendix Card 2 -->
+          <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="200">
+            <div class="p-card-appen">
+              <div class="p-card-body">
+                <div class="appendices-action">
+                  <a href="" target="_blank">
+                    <i class="bi bi-download"></i>
+                  </a>
+                </div>
+                <strong>Endorsement Letter</strong>
+              </div>
+            </div>
+          </div>
+
+          <!-- Appendix Card 3 -->
+          <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="300">
+            <div class="p-card-appen">
+              <div class="p-card-body">
+                <div class="appendices-action">
+                  <a href="" target="_blank">
+                    <i class="bi bi-download"></i>
+                  </a>
+                </div>
+                <strong>Practicum Acceptance Letter</strong>
+              </div>
+            </div>
+          </div>
+
+          <!-- Appendix Card 4 -->
+          <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="400">
+            <div class="p-card-appen">
+              <div class="p-card-body">
+                <div class="appendices-action">
+                  <a href="" target="_blank">
+                    <i class="bi bi-download"></i>
+                  </a>
+                </div>
+                <strong>Liability Waiver</strong>
+              </div>
+            </div>
+          </div>
+
+          <!-- Appendix Card 5 -->
+          <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="500">
+            <div class="p-card-appen">
+              <div class="p-card-body">
+                <div class="appendices-action">
+                  <a href="" target="_blank">
+                    <i class="bi bi-download"></i>
+                  </a>
+                </div>
+                <strong>Training Plan</strong>
+              </div>
+            </div>
+          </div>
+
+          <!-- Appendix Card 6 -->
+          <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="600">
+            <div class="p-card-appen">
+              <div class="p-card-body">
+                <div class="appendices-action">
+                  <a href="" target="_blank">
+                    <i class="bi bi-download"></i>
+                  </a>
+                </div>
+                <strong>Weekly Journal</strong>
+              </div>
+            </div>
+          </div>
+
+
+
+
+        </div>
+      </div>
+
+    </section><!-- /Appendices Section -->
+
+
+
+
+
+
+
+
+
+
+    <!-- Contact Section --> 
     <!-- <section id="contact" class="contact section"> -->
 
       <!-- Section Title -->
@@ -1088,17 +1182,7 @@
       </div>
     </div>
 
-    <div class="container copyright text-center mt-4">
-      <p>© <span>Copyright</span> <strong class="px-1 sitename">Craftivo</strong> <span>All Rights Reserved</span></p>
-      <div class="credits">
-        <!-- All the links in the footer should remain intact. -->
-        <!-- You can delete the links only if you've purchased the pro version. -->
-        <!-- Licensing information: https://bootstrapmade.com/license/ -->
-        <!-- Purchase the pro version with working PHP/AJAX contact form: [buy-url] -->
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
-      </div>
-    </div> -->
-
+   
   </footer>
 
   <!-- Scroll Top -->
