--- a/Craftivo/index.html
+++ b/Craftivo/index.html
@@ -99,8 +99,6 @@
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
 
-      <a class="btn-getstarted" href="#about">Get Started</a>
-
     </div>
   </header>
 
@@ -146,7 +144,7 @@
 
               <div class="profile-actions">
                 <a href="#" class="btn-primary"><i class="bi bi-download"></i> Download CV</a>
-                <a href="#" class="btn-secondary"><i class="bi bi-envelope"></i> Contact</a>
+                <a href="#contact" class="btn-secondary"><i class="bi bi-envelope"></i> Contact</a>
               </div>
 
             </div>
@@ -201,7 +199,7 @@
     </section>
     <!-- /About Section -->
 
-    <!-- Resume Section -->
+    <!-- Education Section -->
     <section id="resume" class="resume section">
 
       <!-- Section Title -->
@@ -221,38 +219,51 @@
                 <div class="timeline-track">
                   <div class="timeline-item">
                     <div class="timeline-content">
-                      <div class="education-meta">
-                        <span class="year-range">2021 - Present</span>
-                        <span class="degree-level">College</span>
+                      <div style="display: flex; gap: 1.5rem; align-items: flex-start;">
+                        <div style="flex-shrink: 0; background-color: white; padding: 0.5rem; border-radius: 8px;">
+                          <img src="assets/img/MMCL.png" alt="MMCL Logo" style="max-width: 150px; max-height: 80px; object-fit: contain;">
+                        </div>
+                        <div style="flex: 1;">
+                          <div class="education-meta">
+                            <span class="year-range">2021 - Present</span>
+                            <span class="degree-level">College</span>
+                          </div>
+                          <h4>Bachelor of Science in Information Technology</h4>
+                          <p class="institution">Mapua Malayan Colleges Laguna</p>
+                          <p class="description">Relevant courses: Web Development, Software Engineering, Software Design, Networking, IoT</p>
+                          <div class="achievement">
+                            <i class="bi bi-award"></i>
+                            <span>Dean's Lister - 1st Year, 2nd Term</span><br>
+                          </div>
+                          <div class="achievement mt-1">
+                            <i class="bi bi-award"></i>
+                            <span>Dean's Lister - 1st Year, 3rd Term</span><br>
+                          </div>
+                        </div>
                       </div>
-                      <h4>Bachelor of Science in Information Technology</h4>
-                      <p class="institution">Mapua Malayan Colleges Laguna</p>
-                      <p class="description">Relevant courses: Web Development, Software Engineering, Software Design, Networking, IoT</p>
-                      <div class="achievement">
-                        <i class="bi bi-award"></i>
-                        <span>Dean's Lister - 1st Year, 2nd Term</span><br>
-                      </div>
-                      <div class="achievement mt-1">
-                        <i class="bi bi-award"></i>
-                        <span>Dean's Lister - 1st Year, 3rd Term</span><br>
-                      </div>
-
-
                       <!-- Educational Background 2 -->
                     </div>
                   </div>
 
                   <div class="timeline-item">
                     <div class="timeline-content">
-                      <div class="education-meta">
-                        <span class="year-range">2019 - 2021</span>
-                        <span class="degree-level">Senior High School</span>
+                      <div style="display: flex; gap: 1.5rem; align-items: flex-start;">
+                        <div style="flex-shrink: 0; background-color: white; padding: 0.5rem; border-radius: 8px;">
+                          <img src="assets/img/FEU.png" alt="FEU Logo" style="max-width: 150px; max-height: 80px; object-fit: contain;">
+                        </div>
+                        <div style="flex: 1;">
+                          <div class="education-meta">
+                            <span class="year-range">2019 - 2021</span>
+                            <span class="degree-level">Senior High School</span>
+                          </div>
+                          <h4>Science, Technology, Engineering, and Mathematics</h4>
+                          <p class="institution">Far Eastern University, Alabang</p>
+                          <div class="achievement">
+                            <i class="bi bi-award"></i>
+                            <span>Graduated with Honors (2021)</span>
+                          </div>
+                        </div>
                       </div>
-                      <h4>Science, Technology, Engineering, and Mathematics</h4>
-                      <p class="institution">Far Eastern University, Alabang</p>
-                      <div class="achievement">
-                        <i class="bi bi-award"></i>
-                        <span>Graduated with Honors (2021)</span>
                     </div>
                   </div>
 
@@ -948,7 +959,7 @@
             <div class="p-card-appen">
               <div class="p-card-body">
                 <div class="appendices-action">
-                  <a href="" target="_blank">
+                  <a href="assets/img/appendix/CV.jpg" target="_blank">
                     <i class="bi bi-download"></i>
                   </a>
                 </div>
@@ -962,7 +973,7 @@
             <div class="p-card-appen">
               <div class="p-card-body">
                 <div class="appendices-action">
-                  <a href="" target="_blank">
+                  <a href="assets/img/appendix/EndorsementLetter.jpg" target="_blank">
                     <i class="bi bi-download"></i>
                   </a>
                 </div>
@@ -976,7 +987,7 @@
             <div class="p-card-appen">
               <div class="p-card-body">
                 <div class="appendices-action">
-                  <a href="" target="_blank">
+                  <a href="assets/img/appendix/AcceptanceForm.jpg" target="_blank">
                     <i class="bi bi-download"></i>
                   </a>
                 </div>
@@ -990,7 +1001,7 @@
             <div class="p-card-appen">
               <div class="p-card-body">
                 <div class="appendices-action">
-                  <a href="" target="_blank">
+                  <a href="assets/img/appendix/LiabilityWaiver.jpg" target="_blank">
                     <i class="bi bi-download"></i>
                   </a>
                 </div>
@@ -1004,7 +1015,7 @@
             <div class="p-card-appen">
               <div class="p-card-body">
                 <div class="appendices-action">
-                  <a href="" target="_blank">
+                  <a href="assets/img/appendix/TrainingPlan.jpg" target="_blank">
                     <i class="bi bi-download"></i>
                   </a>
                 </div>
@@ -1018,7 +1029,7 @@
             <div class="p-card-appen">
               <div class="p-card-body">
                 <div class="appendices-action">
-                  <a href="" target="_blank">
+                  <a href="https://drive.google.com/drive/u/5/folders/1XeW44o-BlWCSEjXdrb-M8WmXiH39c_cA" target="_blank">
                     <i class="bi bi-download"></i>
                   </a>
                 </div>
@@ -1036,98 +1047,76 @@
     </section><!-- /Appendices Section -->
 
 
-
-
-
-
-
-
-
-
-    <!-- Contact Section --> 
-    <!-- <section id="contact" class="contact section"> -->
+    <!--  Contact Section  -->
+    <section id="contact" class="contact section"> 
 
       <!-- Section Title -->
-      <!-- <div class="container section-title" data-aos="fade-up">
-        <span class="subtitle">Contact</span>
-        <h2>Contact</h2>
-        <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium totam rem aperiam</p>
-      </div>End Section Title -->
+      <div class="container section-title" data-aos="fade-up">
+        <span class="subtitle" style="font-size: 30px;">Contact</span>
+      <p>Get in touch with me through any of the following methods.</p>
+      </div>
+      
+      <!-- End Section Title -->
 
-      <!-- <div class="container">
+       <div class="container">
 
-        <div class="row gy-4">
+        <div class="row gy-4 justify-content-center">
 
-          <div class="col-lg-4">
+          <div class="col-lg-6">
             <div class="info-item">
               <div class="icon-wrapper">
-                <i class="bi bi-geo-alt"></i>
+                <i class="bi bi-github"></i>
               </div>
               <div>
-                <h3>Address</h3>
-                <p>2847 Oak Street, San Francisco, CA 94102</p>
+                <h3>GitHub</h3>
+                <p>https://github.com/EmsFD</p>
               </div>
             </div>
+          </div>
 
+          <div class="col-lg-6">
             <div class="info-item">
               <div class="icon-wrapper">
                 <i class="bi bi-telephone"></i>
               </div>
               <div>
                 <h3>Call Me</h3>
-                <p>+1 (555) 234-5678</p>
+                <p>+63 993 979 2456</p>
               </div>
             </div>
+          </div>
 
+          <div class="col-lg-6">
             <div class="info-item">
               <div class="icon-wrapper">
                 <i class="bi bi-envelope"></i>
               </div>
               <div>
                 <h3>Email Me</h3>
-                <p>alex@example.com</p>
+                <p>dellavaemerson@gmail.com</p>
               </div>
             </div>
+          </div>
 
-          </div> -->
-
-          <!-- <div class="col-lg-8">
-            <form action="forms/contact.php" method="post" class="php-email-form">
-              <div class="row gy-4">
-
-                <div class="col-md-6">
-                  <input type="text" name="name" class="form-control" placeholder="Your Name" required="">
-                </div>
-
-                <div class="col-md-6">
-                  <input type="email" class="form-control" name="email" placeholder="Your Email" required="">
-                </div>
-
-                <div class="col-md-12">
-                  <input type="text" class="form-control" name="subject" placeholder="Subject" required="">
-                </div>
-
-                <div class="col-md-12">
-                  <textarea class="form-control" name="message" rows="6" placeholder="Message" required=""></textarea>
-                </div>
-
-                <div class="col-md-12 text-center">
-                  <div class="loading">Loading</div>
-                  <div class="error-message"></div>
-                  <div class="sent-message">Your message has been sent. Thank you!</div>
-
-                  <button type="submit">Send Message</button>
-                </div>
-
+          <div class="col-lg-6">
+            <div class="info-item">
+              <div class="icon-wrapper">
+                <i class="bi bi-envelope"></i>
               </div>
-            </form>
+              <div>
+                <h3>Email Me</h3>
+                <p>dellavaemerson@gmail.com</p>
+              </div>
+            </div>
           </div>
 
         </div>
 
-      </div> -->
+      </div> 
 
-    </section><!-- /Contact Section -->
+    </section>
+    
+    <!-- /Contact Section -->
 
   </main>
 <!-- 
