--- a/Craftivo/index.html
+++ b/Craftivo/index.html
@@ -86,7 +86,7 @@
           <li><a href="#about">About</a></li>
           <li><a href="#resume">Education</a></li>
           <li><a href="#services">Certifications</a></li>
-          <li class="dropdown"><a href="#"><span>Portfolio</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
+          <li class="dropdown"><a href="#portfolio"><span>Portfolio</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
               <li><a href="#portfolio">Projects</a></li>
               <li><a href="#capstone">4th Year Capstone</a></li>
@@ -143,7 +143,7 @@
               </div>
 
               <div class="profile-actions">
-                <a href="#" class="btn-primary"><i class="bi bi-download"></i> Download CV</a>
+                <a href="assets/img/appendix/CV.jpg" target="_blank" class="btn-primary"><i class="bi bi-download"></i> Download CV</a>
                 <a href="#contact" class="btn-secondary"><i class="bi bi-envelope"></i> Contact</a>
               </div>
 
@@ -732,7 +732,25 @@
         <div class="container section-title" data-aos="fade-up">
           <span class="subtitle" style="font-size:30px;">OJT Final Output</span>
         </div>
-      
+
+        <div class="container">
+        <div class="row gy-4 mb-4 justify-content-center">
+        <div class="col-lg-6 col-md-6" data-aos="fade-up" data-aos-delay="100">
+            <div class="p-card-appen">
+              <div class="p-card-body">
+                <div class="appendices-action">
+                  <a href="assets/img/projects/Dellava-Final-Report.pdf" target="_blank">
+                    <i class="bi bi-download"></i>
+                  </a>
+                </div>
+                <strong>Final Report Full Details</strong>
+              </div>
+            </div>
+          </div>
+          </div>
+          </div>
+
+
         <div class="p-card justify-content-center mt-3" data-aos="fade-up" data-aos-delay="100">
           <div class="p-card-body mt-3">
             <h3 class="card-title">Document Management System</h3>
@@ -1101,11 +1119,11 @@
           <div class="col-lg-6">
             <div class="info-item">
               <div class="icon-wrapper">
-                <i class="bi bi-envelope"></i>
+                <i class="bi bi-facebook"></i>
               </div>
               <div>
-                <h3>Email Me</h3>
-                <p>dellavaemerson@gmail.com</p>
+                <h3>Facebook</h3>
+                <p>Emerson Alvarez Dellava</p>
               </div>
             </div>
           </div>
